# social-scanner

./: .env.example  .gitignore  README.md  config.py  daily_report.py  dashboard.py  db.py  discover.py  extractor.py  filter.py  generate_slideshow.py  hashtags.py  llm.py  pyproject.toml  requirements.txt  scorer.py  scraper.py
docs/: initial-spec  trending_destinations_2026.csv
docs/brainstorms/: 2026-03-25-analytics-intelligence-loop-requirements.md
docs/plans/: 2026-03-23-001-feat-atlasi-place-discovery-pipeline-plan.md  2026-03-24-001-feat-category-based-search-filter-plan.md  2026-03-24-002-feat-auto-slideshow-generation-plan.md  2026-03-25-001-feat-analytics-intelligence-loop-plan.md
docs/solutions/logic-errors/: batch-resolve-analytics-pipeline-review-findings.md  batch-resolve-category-feature-code-review-findings.md  (+1 more)
pipeline/: analytics.py  conversions.py  db.py  enrichment.py  extractor.py  filter.py  hashtags.py  hooks.py  image_gen.py  image_styles.py  intelligence.py  llm.py  ocr.py  overlay.py  photo_search.py  posting.py  retry.py  scorer.py  scraper.py  slideshow_types.py  weighted_selection.py
templates/: dashboard.html
tests/: conftest.py  test_analytics.py  test_analytics_schema.py  test_category.py  test_conversions.py  test_daily_report.py  test_enrichment.py  test_generate_slideshow.py  test_hooks.py  test_image_gen.py  test_image_styles.py  test_intelligence.py  test_llm.py  test_overlay.py  test_pipeline.py  test_posting.py  test_scorer.py  test_scraper.py  test_slideshow_db.py  test_slideshow_types.py  test_weighted_selection.py
