[project]
name = "social-scanner"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "T20",   # flake8-print (flag print statements)
    "RUF",   # ruff-specific rules
]
ignore = [
    "T201",  # allow print() — this is a CLI tool
    "E501",  # line length handled by formatter
    "RUF001",  # allow ambiguous unicode chars (Japanese test data)
    "RUF002",  # allow ambiguous unicode in docstrings
]

[tool.ruff.lint.isort]
known-first-party = ["pipeline", "config"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
